--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PEXELS_API_KEY=uREABhr9TFky2vfKiox0mkXblJBNQznMPMhLRfnrCAEb3mrmwBr9rvaO
+GIN_MODE=release
+UNSPLASH_KEY=Client-ID Mf8Om8aujG7ksYkVU4Ojt8pIfptv5qUpjinEHEGBlw0
+
