--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 app.env
+.env
 
 # Created by https://www.toptal.com/developers/gitignore/api/go,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,windows
