Image upload implemented

--- a/.env
+++ b/.env
@@ -33,3 +33,8 @@ REFRESH_TOKEN_PUBLIC_KEY=LS0tLS1CRUdJTiBQVUJMSUMgS0VZLS0tLS0KTUZ3d0RRWUpLb1pJaHZ
 
 REFRESH_TOKEN_EXPIRED_IN=60m
 REFRESH_TOKEN_MAXAGE=60
+
+# Cloudinary
+CLOUDINARY_KEY=193776435572677
+CLOUDINARY_SECRET=jiBU3jzNrbaf_lHGA3T1p2M6mfY
+CLOUDINARY_NAME=det7zlpij
