remove .env from upstream

--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,5 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/goland,go
-
-
 .env
+/.env
