--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,7 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/goland,go
 .env
 /.env
+air.toml
+./air.toml
+./tmp
+tmp
