check username endpoint

--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,8 @@ PEXELS_API_KEY=
 
 GRPC_SERVER_ADDRESS=
 
-MONGO_INITDB_ROOT_USERNAME=
-MONGO_INITDB_ROOT_PASSWORD=
 
-MONGODB_LOCAL_URI=
+MONGODB_URI=
 
 REDIS_URL=
 
@@ -29,7 +27,12 @@ ACCESS_TOKEN_MAXAGE=
 
 REFRESH_TOKEN_PRIVATE_KEY=
 
-REFRESH_TOKEN_PUBLIC_KEY===
+REFRESH_TOKEN_PUBLIC_KEY=
 
 REFRESH_TOKEN_EXPIRED_IN=
 REFRESH_TOKEN_MAXAGE=
+
+# Cloudinary
+CLOUDINARY_KEY=
+CLOUDINARY_NAME=
+CLOUDINARY_SECRET=
